add mode change

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="buttons">
             <div class="conf">
-                <button id="changeMode"><span class="selected">ランダムモード</span><br>←→<br><span>設定モード</span></button>
+                <button id="changeMode"><span class="Random">ランダムモード</span><br>←→<br><span class="Select">設定モード</span></button>
                 <button id="changeColor">色切り替え</button>
                 <button id="reset">リセット</button>
             </div>
