--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
                 <button id="reset">リセット</button>
             </div>
             <button id='start'>スタート！！</button>
+            <p id="text">
+       <span id="min">0</span>分
+       <span id="sec">00.00</span>秒
+     </p>
         </div>
         <div class='container'>
             <button id='btn-1' class='sakura' data-btn="1"></button>
