--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <button id="reset">リセット</button>
             </div>
             <button id='start'>スタート！！</button>
-            <p id="text">
-       <span id="min">0</span>分
-       <span id="sec">00.00</span>秒
-     </p>
+            <p id="timer">
+               <span id="min">0</span>分
+               <span id="sec">00.00</span>秒
+            </p>
         </div>
         <div class='container'>
             <button id='btn-1' class='sakura' data-btn="1"></button>
@@ -30,8 +30,8 @@
             <button id='btn-10' class='sakura' data-btn="10"></button>
             <button id='btn-11' class='sakura' data-btn="11"></button>
         </div>
+        <button class="howTow">@遊び方@</button>
         <div class="text">
-            <span>@遊び方@</span><br>
             1.スタートを押します<br>
             2.ランダムで緑のパネルが現れます<br>
             3.パネルを押すと、そのパネル+隣接したパネルの色が緑←→桜で入れ替わります<br>
