--- a/index.html
+++ b/index.html
@@ -29,16 +29,21 @@
             <button id='btn-9' class='sakura' data-btn="9"></button>
             <button id='btn-10' class='sakura' data-btn="10"></button>
             <button id='btn-11' class='sakura' data-btn="11"></button>
+            <div id="text">
+                1.スタートを押します<br>
+                2.ランダムで緑のパネルが現れます<br>
+                3.パネルを押すと、そのパネル+隣接したパネルの色が緑←→桜で入れ替わります<br>
+                4.全てのパネルが桜色になればクリア<br>(*´∇｀*)<br><br>
+
+                ※立体的にしたせいか、二段目と三段目の上のあたりが反応しません。真ん中を押してください。
+            </div>
+            <div id="hikarin">
+                <p>Clear！</p>
+                <img src="hikarin.JPG" alt="宮崎県ご当地Vtuber桜羽ひかりさん">
+                <p class="name">宮崎ご当地Vtuber/桜羽ひかりさん</p>
+            </div>
         </div>
         <button class="howTow">@遊び方@</button>
-        <div class="text">
-            1.スタートを押します<br>
-            2.ランダムで緑のパネルが現れます<br>
-            3.パネルを押すと、そのパネル+隣接したパネルの色が緑←→桜で入れ替わります<br>
-            4.全てのパネルが桜色になればクリア<br>(*´∇｀*)<br><br>
-
-            ※立体的にしたせいか、二段目と三段目の上のあたりが反応しません。真ん中を押してください。
-        </div>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
         <script src="function.js"></script>
     </body>
