--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             <button id='btn-11' class='sakura' data-btn="11"></button>
             <div id="text">
                 1.スタートを押します<br>
-                2.ランダムで緑のパネルが現れます<br>
-                3.パネルを押すと、そのパネル+隣接したパネルの色が緑←→桜で入れ替わります<br>
-                4.全てのパネルが桜色になればクリア<br>(*´∇｀*)<br><br>
+                2.ランダムで緑（黒）になります<br>
+                3.パネルを押すと、そのパネル+隣接したパネルの色が緑（黒）←→桜（白）で入れ替わります<br>
+                4.全てのパネルが桜（白）色になればクリア(*´∇｀*)<br><br>
+                ・設定モードでは、自由に配置できます<br>
+                ・色を桜/緑と白/黒で切り替えられます。<br>桜色はクリア時にイラストが出ます<br><br>
 
                 ※立体的にしたせいか、二段目と三段目の上のあたりが反応しません。真ん中を押してください。
             </div>
